src/test/compile-fail/attr-before-view-item.rs
./src/test/compile-fail/attr-before-view-item.rs:5:0:5:3: [1;31merror:[0m expected item but found use
./src/test/compile-fail/attr-before-view-item.rs:5 use std;
                                                   ^~~
rt: ---
rt: 0bb1:main:main:                   upcall fail 'explicit failure', src/comp/syntax/parse/parser.rs:112
rt: 0bb1:main:                        domain main @0xa78604c root task failed
